[package]
name = "inventory"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0"
jsonwebtoken = "9"
http-auth-basic = "0.3.5"
time = "0.3"
sha256 = "1.6.0"
rand = "0.10.0"

# Webserver
[dependencies.rocket]
version = "0.5.1"
features = [
    "json",
    "http2",
]

# Custom datatype parsing
[dependencies.serde]
version = "1.0"
features = [
    "derive",
    "std",
]

# UUID support
[dependencies.uuid]
version = "1.21.0"
features = [
    "v4",
    "v7",
    "std",
]

# database operations
[dependencies.sqlx]
version = "0.8.6"
features = [
    "postgres",
    "any",
    "json",
    "macros",
    "migrate",
    "runtime-async-std",
    "uuid",
]